# duckdb

./: .gitignore  CMakeLists.txt
examples/embedded-c++/: CMakeLists.txt  deploy.md  example.py  requirements.txt  test_prediction_native.cpp  test_tag.py  trace_case.cpp
examples/embedded-c++/imbridge/: code.py  server_start.sh  udf_server.cpp
examples/embedded-c++/imbridge_test/: db
src/: CMakeLists.txt
src/common/arrow/: arrow_transform_util.cpp
src/common/ipc/: shared_memory_manager.cpp
src/common/types/: data_chunk.cpp
src/execution/: CMakeLists.txt  adaptive_batch_tuner.cpp  batch_controller.cpp  exec_prediction_util.cpp  expression_executor.cpp  expression_executor_state.cpp  physical_operator.cpp
src/execution/expression_executor/: CMakeLists.txt  execute_between.cpp  execute_case.cpp  execute_cast.cpp  execute_comparison.cpp  execute_conjunction.cpp  execute_constant.cpp  execute_function.cpp  execute_operator.cpp  execute_parameter.cpp  execute_reference.cpp
src/execution/operator/filter/: CMakeLists.txt  physical_prediction_filter.cpp
src/execution/operator/projection/: CMakeLists.txt  my_imlane.cpp  physical_prediction_projection.cpp
src/execution/physical_plan/: CMakeLists.txt  plan_any_join.cpp  plan_comparison_join.cpp  plan_filter.cpp  plan_prediction_util.cpp  plan_projection.cpp
src/include/duckdb/common/enums/: physical_operator_type.hpp
src/include/duckdb/common/ipc/: shared_memory_manager.hpp
src/include/duckdb/execution/: executor.hpp  expression_executor.hpp  expression_executor_state.hpp
src/include/duckdb/function/: scalar_function.hpp
src/include/duckdb/main/: client_context.hpp  connection.hpp
src/include/duckdb/parallel/: pipeline.hpp
src/include/imbridge/execution/: batch_controller.hpp  plan_prediction_util.hpp
src/include/imlane/: my_lane.hpp
src/include/imlane/scheduler/: scheduler.hpp
src/include/prediction/: datachunk_converter.hpp  params.hpp  plan_prediction_util.hpp
src/include/prediction/execution/: adaptive_batch_tuner.hpp  batch_controller.hpp  exec_prediction_util.hpp
src/main/: client_context.cpp  config.cpp  connection.cpp
src/parallel/: pipeline.cpp  pipeline_executor.cpp  pipeline_finish_event.cpp  task_scheduler.cpp
tools/pythonpkg/: setup.py
tools/pythonpkg/duckdb-stubs/functional/: __init__.pyi
tools/pythonpkg/duckdb/functional/: __init__.py
tools/pythonpkg/src/functional/: functional.cpp
tools/sqlite3_api_wrapper/: CMakeLists.txt
(+8 files in other folders)
